# webtron

./: .eslintrc  .gitignore  .tern-project  Cargo.toml  LICENSE  Makefile  README.md  _build.rs  build.rs  package.json  server.go  webpack.config.babel.js  webpack.release.config.babel.js  webtron.go
client/: .csscombrc  .eslintrc  .importsortrc  .parcelrc  .prettierrc  bun.lockb  craco.config.js  gatsby-config.js  gatsby-node.js  gulpfile.js  index.html  index.js  next.config.js  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  webpack.config.js  webtron.css  webtron.js  webtron.ts
client/css/: _animations.scss  tronstyle.css  webtron.css  webtron.css.map  webtron.sass
client/img-src/: gridply.xcf
client/img/src/: gridBG.psd  gridBG.xcf  gridbike.psd  gridbike.xcf  logo.xcf
client/public/: index.html  manifest.json
client/sass/: webtron.sass
client/src/: boot.ts  html.js  index.css  index.html  index.js  index.template.html  main.tsx  webtron.js  webtron.js.bak  webtron.ts
client/src/actions/: index.js  index.ts  socket.js  socket.ts
client/src/components/: App.js  App.tsx  Arena.js  Arena.module.css  Arena.tsx  ArenaSelect.js  ArenaSelect.module.css  ArenaSelect.tsx  CaretLeft.js  CaretLeft.tsx  CaretRight.js  CaretRight.tsx  Connect.js  Connect.module.css  Connect.tsx  GridTrail.js  Lightcycle.js  Lightcycle.module.css  Lightcycle.tsx  Lightribbon.js  Lightribbon.module.css  Lightribbon.tsx  Lobby.js  MainMenu.js  MainMenu.module.css  MainMenu.tsx  MenuButton.js  MenuButton.module.css  MenuButton.tsx  MenuInput.js  MenuInput.module.css  MenuInput.tsx  Root.js  Webtron.js  Webtron.tsx
client/src/hooks/: useAddWebtronLoadedClass.ts  useArenaListPolling.js  useArenaListPolling.ts  useBooleanState.js  useClassName.js  useClassName.ts  useCursorBlink.js  useEventListener.js  useForceUpdate.js  useInterpolatedLightcyclePosition.js  useInterpolatedLightcyclePosition.ts  usePreloadImages.js  (+10 more)
client/states/: Connect.js  Lobby.js  MainMenu.js  index.js  lobby.ts
client/styles/: index.sass
server/: client.go  clienthandler.go  game.go  gameloop.go  gameserver.go  input.go  player.go  server.go  simulation.go  websocket.go
server/msg/: connection.go  msg.go
server/msgdefs/: connection.go
server/simulation/: gridbike.go  gridtrail.go  simulation.go
server_new/: server.go
src/: config.rs  game.rs  lib.rs  macros.rs  main.rs  server.rs  web.rs  web2.rs
src/game/: lobby.rs  player.rs
src/server/: arena.rs  client.rs  game.rs  lobby.rs  messages.rs  player.rs  primitives.rs
src/web/: embed.rs  errors.rs  proxy.rs  websocket.rs  websocket_client.rs
(+72 files in other folders)
