[package]
name = "webtron"
description = "A browser-based multiplayer implementation of the classic Tron Lightcycles arcade game."
version = "2.0.0"
authors = ["alecdwm <alec@owls.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
bytes = "0.5.4"
chrono = { version = "0.4.11", features = ["serde"] }
euclid = { version = "0.20.10", features = ["serde"] }
futures = "0.3.4"
hyper = "0.13.4"
log = "0.4.8"
mime_guess = "2.0.3"
pretty_env_logger = "0.4.0"
quit = "1.0.0"
rand_core = "0.5.1"
rust-embed = { version = "5.5.1", features = ["interpolate-folder-path", "compression"] }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
structopt = "0.3.12"
tokio = { version = "0.2.16", features = ["rt-threaded", "time", "macros", "sync"] }
tokio-tungstenite = "0.10.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
warp = "0.2.2"
