[package]
name = "webtron"
description = "A browser-based multiplayer implementation of the classic Tron Lightcycles arcade game."
version = "2.0.0"
authors = ["alecdwm <alec@owls.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "0.5.6"
chrono = { version = "0.4.44", features = ["serde"] }
euclid = { version = "0.20.14", features = ["serde"] }
futures = "0.3.32"
hyper = "0.13.10"
log = "0.4.29"
lyon_geom = "0.15.3"
mime_guess = "2.0.5"
pretty_env_logger = "0.4.0"
quit = "1.2.0"
rand_core = "0.5.1"
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path", "compression"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
structopt = "0.3.26"
tokio = { version = "0.2.25", features = ["time", "macros", "sync"] }
tokio-tungstenite = "0.10.1"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
warp = "0.3.3"
